--- a/1- Nanocrystals segmentation and population analysis/STEM-data-processing-EDX-HAADF.ipynb
+++ b/1- Nanocrystals segmentation and population analysis/STEM-data-processing-EDX-HAADF.ipynb
@@ -23,8 +23,8 @@
     "* 15/04/2023 - Adding the [segment every grain](https://github.com/zsylvester/segmenteverygrain) (SEG) alghorithm.  \n",
     "* 15/09/2023 - Automatic scanning & processing of all dataset files.\n",
     "* 15/05/2024 - Colour labelling of segmented nanocrystals based on their chemical compisition.\n",
-    "* 20/09/2024 - Addition of watershed segmentation for agglomerated nanocrystals.\n",
-    "* 15/10/2024 - Adittion of peak model fitting residue for fit assessment by end user.\n",
+    "* 20/09/2024 - Addition of watershed segmentation for agglomerated nanocrystals (part of the research at KAUST university in KSA).\n",
+    "* 15/10/2024 - Adittion of peak model fitting residue for fit assessment by end user (part of the research at KAUST university in KSA).\n",
     "* 15/11/2024 - Added auto cropping and rebinning of EDX map prior to the principal component analysis (PCA) denoising.\n",
     "\n",
     "\n",
