--- a/1- Nanocrystals segmentation and population analysis/STEM-data-processing-EDX-HAADF.ipynb
+++ b/1- Nanocrystals segmentation and population analysis/STEM-data-processing-EDX-HAADF.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "## Author\n",
     "\n",
-    "* 01/12/2022 Basem Qahtan - Developed as part of a Ph.D. research at the Italian Institute of Technology (iit) and the University of Genoa (unige). \n",
+    "* 01/12/2022 Basem Qahtan - Developed as part of a Ph.D. research at the Italian Institute of Technology (iit) and the University of Genoa (uniGe). \n",
     "\n",
     "## Changes\n",
     "\n",
