--- a/2- EDX Tomography PCA denoising/EDX-tomography_data processing.ipynb
+++ b/2- EDX Tomography PCA denoising/EDX-tomography_data processing.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "## Author\n",
     "\n",
-    "* 15/10/2024 Basem Qahtan - Developed as part of a Ph.D. research at the Italian Institue of Technology (iit)/and the University of Genoa (uniGe) in Italy and KAUST university in KSA.\n",
+    "* 15/10/2024 Basem Qahtan - Developed as part of a Ph.D. research at the Italian Institue of Technology (iit)/ the University of Genoa (uniGe) in Italy and KAUST university in KSA.\n",
     "\n",
     "## Changes\n",
     "\n",
