Update Cathodoluminescence (CL) Data Processing.ipynb

--- a/3- Cathodoluminescence  (CL) datasets denoising/Cathodoluminescence (CL) Data Processing.ipynb
+++ b/3- Cathodoluminescence  (CL) datasets denoising/Cathodoluminescence (CL) Data Processing.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "## Author\n",
     "\n",
-    "* 15/12/2024 Basem Qahtan - Developed as part of a Ph.D. reearch at the Italian Institue of Technology (iit) in italy and KAUST university in KSA.\n",
+    "* 15/12/2024 Basem Qahtan - Developed as part of a Ph.D. research at the Italian Institue of Technology (iit)/ University of Genoa (uniGe) in italy and KAUST university in KSA.\n",
     "## Changes\n",
     "\n",
     "* 15/10/2024 Update: Added auto cropping and rebinning of EDX map prior to the principal component analysis (PCA) denoising.\n",
