--- a/2- EDX Tomography PCA denoising/EDX-tomography_data processing.ipynb
+++ b/2- EDX Tomography PCA denoising/EDX-tomography_data processing.ipynb
@@ -171,7 +171,7 @@
     "            # Determine the rebinning factor based on dimensions\n",
     "    if x_dim > 500 and y_dim > 500:\n",
     "                    #crop EDS axes to be divisable by 4\n",
-    "                    EDS.crop(axis=0,end=(y_dim // 4)*4)\n",
+    "                    EDS.crop(axis=0,end=(x_hdim // 4)*4)\n",
     "                    EDS.crop(axis=1,end=(y_dim // 4)*4)\n",
     "\n",
     "                    HAADF.crop(axis=0,end=(x_hdim // 4)*4)\n",
