--- a/1- Nanocrystals segmentation and population analysis/STEM-data-processing-EDX-HAADF.ipynb
+++ b/1- Nanocrystals segmentation and population analysis/STEM-data-processing-EDX-HAADF.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "The sample and the data used in this work are described in Nikolaos Livakas et al., Journal of the American Chemical Society, 2023 (see the [full article](https://pubs.acs.org/doi/10.1021/jacs.3c06214) or [here](https://pubmed.ncbi.nlm.nih.gov/37691231/)).\n",
     "\n",
-    "CsPbCl$_3$      <span style="color: red;">CsPbCl₃</span>  Perovskite nanocrystals doped with iodine through injection method are investigated with an EDX/HAADF experiment (FEI Osiris TEM, 4 EDS detectors). the doping of the sample with iodine results in the transition of the nanocrytals from CsPbCl$_3$ to CsPbI$_3$ as a result of halide replacement. the final image in figure 1 below shows the colour labeling of these nanocrystals were an atomic ratio of I/Pb of 3 means full halide replacement has occured. it can be seen that the doping is not uniform across all nanocrystals. Hence the development of this script to prcess the entire nanocrystals individually using the high annual dark field (HAADF) image as a guide for masking.\n",
+    "CsPbCl$_3$ Perovskite nanocrystals doped with iodine through injection method are investigated with an EDX/HAADF experiment (FEI Osiris TEM, 4 EDS detectors). the doping of the sample with iodine results in the transition of the nanocrytals from CsPbCl$_3$ to CsPbI$_3$ as a result of halide replacement. the final image in figure 1 below shows the colour labeling of these nanocrystals were an atomic ratio of I/Pb of 3 means full halide replacement has occured. it can be seen that the doping is not uniform across all nanocrystals. Hence the development of this script to prcess the entire nanocrystals individually using the high annual dark field (HAADF) image as a guide for masking.\n",
     "\n"
    ]
   },
