--- a/1- Nanocrystals segmentation and population analysis/STEM-data-processing-EDX-HAADF.ipynb
+++ b/1- Nanocrystals segmentation and population analysis/STEM-data-processing-EDX-HAADF.ipynb
@@ -11,20 +11,20 @@
     "\n",
     "# EDX-HAADF data processing for population analysis of large ensembles of nanocrystals\n",
     "\n",
-    "The search for new nanomaterials can be accelerated with the integration of big data anaylsis alghorithms, this notebookbook collects data such as total EDX/HAADF signal intensity and atomic quantifcation of individual nanocrystals as shown in figure 1 below.\n",
+    "The search for new nanomaterials can be accelerated with the integration of big data analysis algorithms, this notebook collects data such as total EDX/HAADF signal intensity and atomic quantification of individual nanocrystals as shown in figure 1 below.\n",
     "\n",
     "## Author\n",
     "\n",
-    "* 01/12/2022 Basem Qahtan - Developed as part of a Ph.D. research at the Italian Institute of Technology (iit) and the University of Genoa (uniGe). \n",
+    "* 01/12/2022 Basem Qahtan - Developed as part of a Ph.D. research project at the Italian Institute of Technology (IIT) and the University of Genoa (UniGe). \n",
     "\n",
     "## Changes\n",
     "\n",
-    "* 15/02/2023 - Addition of the X-ray lines & their respectrive Kfactors.\n",
-    "* 15/04/2023 - Adding the [segment every grain](https://github.com/zsylvester/segmenteverygrain) (SEG) alghorithm.  \n",
+    "* 15/02/2023 - Addition of the X-ray lines & their respective K-factors.\n",
+    "* 15/04/2023 - Addition of the [segment every grain](https://github.com/zsylvester/segmenteverygrain) (SEG) algorithm.  \n",
     "* 15/09/2023 - Automatic scanning & processing of all dataset files.\n",
-    "* 15/05/2024 - Colour labelling of segmented nanocrystals based on their chemical compisition.\n",
+    "* 15/05/2024 - Colour labelling of segmented nanocrystals based on their chemical composition.\n",
     "* 20/09/2024 - Addition of watershed segmentation for agglomerated nanocrystals (part of the research at KAUST university in KSA).\n",
-    "* 15/10/2024 - Adittion of peak model fitting residue for fit assessment by end user (part of the research at KAUST university in KSA).\n",
+    "* 15/10/2024 - Addition of peak model fitting residue for fit assessment by end user (part of the research at KAUST university in KSA).\n",
     "* 15/11/2024 - Added auto cropping and rebinning of EDX map prior to the principal component analysis (PCA) denoising.\n",
     "\n",
     "\n",
@@ -47,7 +47,7 @@
     "\n",
     "The sample and the data used in this work are described in Nikolaos Livakas et al., Journal of the American Chemical Society, 2023 (see the [full article](https://pubs.acs.org/doi/10.1021/jacs.3c06214) or [here](https://pubmed.ncbi.nlm.nih.gov/37691231/)).\n",
     "\n",
-    "CsPbCl$_3$ Perovskite nanocrystals doped with iodine through injection method are investigated with an EDX/HAADF experiment (FEI Osiris TEM, 4 EDS detectors). the doping of the sample with iodine results in the transition of the nanocrytals from CsPbCl$_3$ to CsPbI$_3$ as a result of halide replacement. the final image in figure 1 below shows the colour labeling of these nanocrystals were an atomic ratio of I/Pb of 3 means full halide replacement has occured. it can be seen that the doping is not uniform across all nanocrystals. Hence the development of this script to prcess the entire nanocrystals individually using the high annual dark field (HAADF) image as a guide for masking.\n",
+    "CsPbCl$_3$ Perovskite nanocrystals doped with iodine through injection method are investigated with an EDX/HAADF experiment (FEI Osiris TEM, 4 EDS detectors). the doping of the sample with iodine results in the transition of the nanocrytals from CsPbCl$_3$ to CsPbI$_3$ as a result of halide replacement. the final image in figure 1 below shows the colour labeling of these nanocrystals where an atomic ratio of I/Pb of 3 means full halide replacement has occured. it can be seen that the doping is not uniform across all nanocrystals. Hence, the development of this script to process the entire nanocrystals individually using the high-angle annular dark-field (HAADF) image as a guide for masking.\n",
     "\n"
    ]
   },
@@ -57,7 +57,7 @@
    "metadata": {},
    "source": [
     "<img src=\"images/Flow_chart.png\" style=\"height:500px;\">\n",
-    "Figure 1: Flowchart of the keypoints of the dataset processing."
+    "Figure 1: Flowchart of the key points of the dataset processing."
    ]
   },
   {
