--- a/1- Nanocrystals segmentation and population analysis/STEM-data-processing-EDX-HAADF.ipynb
+++ b/1- Nanocrystals segmentation and population analysis/STEM-data-processing-EDX-HAADF.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "## <a id='top'></a> Contents \n",
     "\n",
-    "1. <a href='dat'><span style="color: red;"> Specimen & Data</a>\n",
+    "1. <span style="color: red;"> Specimen & Data\n",
     "2. <a href='#loa'> Loading the x-ray lines & their respective Kfactors</a>\n",
     "3. <a href='#user'> User parameters</a>\n",
     "4. <a href='#start'> Start loading and processing the STEM data</a>\n",
