--- a/1- Nanocrystals segmentation and population analysis/STEM-data-processing-EDX-HAADF.ipynb
+++ b/1- Nanocrystals segmentation and population analysis/STEM-data-processing-EDX-HAADF.ipynb
@@ -137,11 +137,11 @@
    "id": "17a5cf8a",
    "metadata": {},
    "source": [
-    "## These are the X-rays Kfactors for the Thermo Fisher spectra 300 TEM at the Italian Institue of Technology at Genova, Italy and the Thermo Fisher in KAUST university, KSA.\n",
+    "## These are the X-rays K-factors for the Thermo Fisher spectra 300 TEM at the Italian Institute of Technology at Genova, Italy and the Thermo Fisher TEM in KAUST university, KSA.\n",
     "\n",
-    "### You may load your TEM's X-rays elements and their respective Kfactors into the 2 variables below (X_ray_Lines ,Kfactor).\n",
+    "### You may load your TEM's X-rays elements and their respective K-factors into the two  variables below (X_ray_Lines ,Kfactor).\n",
     "\n",
-    "#### Make sure the x-ray element is labeled similiarly according to the  \"X_ray_Lines\" array below, order of the elements in the \"X_ray_Lines\" array must match their respective Kfactors in the \"Kfactor\" array.\n"
+    "#### Make sure the X-ray element is labelled similarly according to the  \"X_ray_Lines\" array below, order of the elements in the \"X_ray_Lines\" array must match their respective Kfactors in the \"K-factor\" array.\n"
    ]
   },
   {
