--- a/1- Nanocrystals segmentation and population analysis/STEM-data-processing-EDX-HAADF.ipynb
+++ b/1- Nanocrystals segmentation and population analysis/STEM-data-processing-EDX-HAADF.ipynb
@@ -405,7 +405,7 @@
     }
    ],
    "source": [
-    "#to check if an element match their respective kfactors\n",
+    "#to check if an element match their respective K-factors\n",
     "element_number=1\n",
     "print(X_ray_Lines_iit[element_number])\n",
     "print(Kfactors_iit[element_number])"
@@ -426,27 +426,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set this to FALSE if you dont want to use the principal component analysis \n",
+    "# Set this to FALSE if you don't want to use the principal component analysis (PCA) \n",
     "PCA_NMF= False  \n",
     "\n",
-    "# this is the value of the variance to ber considered ranging between 0 and 1 , for higher noise filtering set this \n",
+    "# This is the value of the variance to be considered ranging between 0 and 1 , for higher noise filtering set this \n",
     "# to lower value based on the scree plot\n",
     "PCA_explained_variance= 0.9\n",
     "#--------------------------------------------------------------------------------------------\n",
     "\n",
-    "# if your nanocrystals/nanoparticles are heavily agglomerated:\n",
-    "    #>>>>then set this to True (to use watershedding for segmentation).\n",
-    "# if they are well segregated:\n",
-    "    #>>>then set it to False (to use the segment every grain \"SEG\" alghorithm to segment the nanocrystals)\n",
+    "# If your nanocrystals/nanoparticles are heavily agglomerated:\n",
+    "    #>>>>then set this to True (to use the watershed segmentation).\n",
+    "# If they are well segregated:\n",
+    "    #>>>then set it to False (to use the segment every grain \"SEG\" algorithm to segment the nanocrystals)\n",
     "agglomerated=False\n",
     "\n",
     "#--------------------------------------------------------------------------------------------\n",
     "\n",
     "#selecting the kfactors:\n",
-    "# if the data were aquired by the TEM in iit in italy >>>> set to 0\n",
-    "# if the data were aquired by the TEM in KAUST in KSA >>>> set to 1\n",
+    "# If the data were acquired by the TEM in IIT in italy >>>> set to 0\n",
+    "# If the data were acquired by the TEM in KAUST in KSA >>>> set to 1\n",
     "\n",
-    "# if you used another TEM, ensure to load the elements and their respective kfactors either through an import from an excel file \n",
+    "# If you used another TEM, ensure to load the elements and their respective kfactors either through an import from an Excel file \n",
     "# or by creating an array for the kfactors in the code above.\n",
     "\n",
     "TEM_used=0"
