--- a/2- EDX Tomography PCA denoising/EDX-tomography_data processing.ipynb
+++ b/2- EDX Tomography PCA denoising/EDX-tomography_data processing.ipynb
@@ -8,22 +8,22 @@
     "## This script can be found on [GitHub](https://github.com/Basem-Qahtan/STEM-data-processing-scripts) along with other scripts for STEM data processing algorithms.\n",
     "\n",
     "##### -------------------------------------------------------------------------------------------------------------------------------------------------\n",
-    "# EDX-tomography. \n",
+    "# EDX-Tomography. \n",
     "\n",
-    "EDX tomography can be used to observe the topography of the elements in the sample. a main chalenge is the Copper x-ray signal being generated with high tilit ( such as -60  or +60 degrees), one way to overcome this is to calibrate the EDX detectors (in case of 4 EDX detectors, 2 might be turned off as high tiliting angles) to reduce the collection of the intense copper x-ray signal. but the Cu signal remains intense and might overlap with other element x-ray signals such as Zn_Ka x-ray peak.\n",
+    "EDX-Tomography can be used to observe the topography of the elements in the sample. The main challenge is the copper x-ray signal being generated at high tilt ( such as -60  or +60 degrees), one way to overcome this is to calibrate the EDX detectors (in case of 4 EDX detectors, 2 might be turned off as high tilting angles) to reduce the collection of the intense copper x-ray signal. but the Cu signal remains intense and might overlap with other element x-ray signals such as Zn_Ka x-ray peak.\n",
     "\n",
-    "The Pprincipal component analysis (PCA) can be used to denoise or eleminate the Cu signal (when applied on all the tilt angles data by stacjking them into 1 variable). this notebook stacks and denoise/remove unwanted signals such as Cu from the datasets. \n",
+    "The Principal component analysis (PCA) can be used to denoise or eliminate the Cu signal (when applied on all the tilt angles data by stacking them into one variable). this notebook stacks and denoise/remove unwanted signals such as Cu from the datasets. \n",
     "\n",
     "\n",
     "## Author\n",
     "\n",
-    "* 15/10/2024 Basem Qahtan - Developed as part of a Ph.D. research at the Italian Institue of Technology (iit)/ the University of Genoa (uniGe) in Italy and KAUST university in KSA.\n",
+    "* 15/10/2024 Basem Qahtan - Developed as part of a Ph.D. research at the Italian Institute of Technology (IIT)/ the University of Genoa (UniGe) in Italy and KAUST university in KSA.\n",
     "\n",
     "## Changes\n",
     "\n",
     "* 01/11/2024 - Added auto cropping and rebinning of EDX map prior to the principal component analysis (PCA) denoising.\n",
     "* 15/11/2024 - Added stacking of total EDX tilt angle signals. \n",
-    "* 15/12/2024 - Added auto detection of x-ray lines and plotting of elemental maps by selecting the the name of the x-ray line. \n",
+    "* 15/12/2024 - Added auto detection of x-ray lines and plotting of elemental maps by selecting the name of the x-ray line. \n",
     "* 19/12/2024 - Exporting of elemental maps in PNG format (with scale bar) and TIF file without a scale bar (not compressed).\n",
     "\n",
     "\n",
@@ -34,7 +34,7 @@
     "## <a id='top'></a> Contents\n",
     "\n",
     "1. <a href='#dat'>Specimen & Data</a>\n",
-    "2. <a href='#PCA_'> Cu_Kb and Zn_Ka peak deconvolution using PCA decompisition  </a>\n",
+    "2. <a href='#PCA_'> Cu_Kβ and Zn_Kα peak deconvolution using PCA decomposition  </a>\n",
     "3. <a href='#load'> Loading ,rebinning and stacking and PCA decomposition of the EDX maps </a>\n",
     "4. <a href='#pca-nmf'> PCA-NMF decomposition of the stacked EDX map</a>\n",
     "5. <a href='#X_ray_lines'> X-ray intensity lines identification and selection for elemental map plotting</a>\n",
@@ -45,26 +45,26 @@
     "# <a id='dat'></a> 1. Specimen & Data\n",
     "\n",
     "\n",
-    "EDX tomography was collected from FeOZn sample using a TEM with 4 EDX detectors (EDX detectors are not turned off at high tilt angles meaning the Cu signal will be intense). due to the Cu high peak signal it overaps with the Zn_Ka even after applying PCA denoising on individual tilt angle datasets as shown in figure 1 (left) below.\n",
+    "EDX tomography was collected from FeOZn sample using a TEM with 4 EDX detectors (EDX detectors are not turned off at high tilt angles meaning the Cu signal will be intense). Due to the Cu high peak signal it overlaps with the Zn_Ka even after applying PCA denoising on individual tilt angle datasets as shown in figure 1 (left) below.\n",
     "\n",
     "<img src=\"images/PCA EDX denoising.png\" style=\"height:300px;\">\n",
     "Figure 1: PCA denoising of FeOZn sample using 1 tilt angle dataset (right) and all the tilt angle datasets stacked (left).\n",
     "\n",
-    "# <a id='PCA_'></a> 2. Cu_Kb and Zn_Ka peak deconvolution using PCA decompisition \n",
+    "# <a id='PCA_'></a> 2. Cu_Kβ and Zn_Kα peak deconvolution using PCA decomposition \n",
     "\n",
     "\n",
-    "However, when applying PCA on the entire tilt angles combined, PCA is able to distinguish the main 4 components of the EDX spectrum as shown in figure 2 . now the EDX signal can be reconstructed with the exclusion of the Cu x-ray signal. This reults in the elemeintation of the Cu signal as shown in figure 1 (right).\n",
+    "However, when applying PCA on the entire tilt angles combined, PCA is able to distinguish the main 4 components of the EDX spectrum as shown in figure 2 . now the EDX signal can be reconstructed with the exclusion of the Cu x-ray signal. This results in the elimination of the Cu signal as shown in figure 1 (right).\n",
     "\n",
     "\n",
     "<img src=\"images/PCA on EDX tomography.png\" style=\"height:500px;\">\n",
     "Figure 2: PCA decompositition of FeOZn sample showing the first 4 components.\n",
     "\n",
     "\n",
-    "Fifure 3 below shows the elemental map of Zn_Ka signal, the signal is noisy using only the raw datasets. When applying EDX map rebinning by 4, the signal is imporved a little. However, when applying PCA after rebining, the signal to noise ratio is greatly imporved.\n",
+    "Figure 3 below shows the elemental map of Zn_Ka signal, the signal is noisy using only the raw datasets. When applying EDX map rebinning by 4, the signal is improved a little. However, when applying PCA after rebining, the signal to noise ratio is greatly imporved.\n",
     "\n",
     "\n",
     "<img src=\"images/PCA EDX tomographty elemental map.png\" style=\"height:300px;\">\n",
-    "Figure 3: Zn_Ka elemental map of 1 tilt angle of raw data (right), rebinned data (center) and rebinned and PCA denoised (left).\n"
+    "Figure 3: Zn_Ka elemental map of 1 tilt angle of raw data (right), rebinned data (centre) and rebinned and PCA denoised (left).\n"
    ]
   },
   {
