--- a/2- EDX Tomography PCA denoising/EDX-tomography_data processing.ipynb
+++ b/2- EDX Tomography PCA denoising/EDX-tomography_data processing.ipynb
@@ -246,7 +246,7 @@
    "id": "044e5b61-de9e-4bc2-a15f-b69d9a41bd1f",
    "metadata": {},
    "source": [
-    "#### When plotting the signal below: if you cant use the keyboard arrows to navigate through the signal or navigation axes, try to drag the small red square (in the top left corner of the EDX map) by holding the right click on the mouse "
+    "#### When plotting the signal below: if you can't use the keyboard arrows to navigate through the signal or navigation axes, try to drag the small red square (in the top left corner of the EDX map) by holding the right click on the mouse."
    ]
   },
   {
@@ -287,9 +287,9 @@
    "id": "7c5bc0c5",
    "metadata": {},
    "source": [
-    "### plot the loadings and factors of the components along with the scree plot:\n",
+    "### Plot the loadings and factors of the components along with the scree plot:\n",
     "\n",
-    "#### After plotting the decomposition results below: if you cant navigate between the components using the keyboard arrows, use the slider bar opened in 3rd smal window or in the notebook itself."
+    "#### After plotting the decomposition results below: if you can't navigate between the components using the keyboard arrows, use the slider bar opened in 3rd small window or in the notebook itself."
    ]
   },
   {
@@ -333,7 +333,7 @@
    "id": "60533c85",
    "metadata": {},
    "source": [
-    "### Select the number of the 1st components to be used in Non-negative matrix factorization (NMF), in this example 5 components from PCA output are selected:"
+    "### Select the number of the first components to be used in Non-negative matrix factorization (NMF). In this example, 5 components from PCA output are selected:"
    ]
   },
   {
