--- a/2- EDX Tomography PCA denoising/EDX-tomography_data processing.ipynb
+++ b/2- EDX Tomography PCA denoising/EDX-tomography_data processing.ipynb
@@ -380,7 +380,7 @@
    "id": "258e9e1d",
    "metadata": {},
    "source": [
-    "### Reconstruct the EDX tomography datasets by selecting the coomponents from NMF \n",
+    "### Reconstruct the EDX tomography datasets by selecting the components from NMF \n",
     "#### If you want to use the first 4 components you can type:\n",
     "###### stacked_EDX = stacked_EDX.get_decomposition_model(4)\n",
     "#### If you want to use the 1st, 2nd and 4th components you can type:\n",
@@ -435,7 +435,7 @@
    "id": "5c619627-7022-425f-9577-4c774feb65be",
    "metadata": {},
    "source": [
-    "## To plot the 1st tilt angle total smu EDX spectrum: \n",
+    "## To plot the 1st tilt angle total sum EDX spectrum: \n",
     "#### If other tilt angles need to be viewed replace the 0 with the next index of the tilt angle."
    ]
   },
