--- a/2- EDX Tomography PCA denoising/EDX-tomography_data processing.ipynb
+++ b/2- EDX Tomography PCA denoising/EDX-tomography_data processing.ipynb
@@ -10,7 +10,7 @@
     "##### -------------------------------------------------------------------------------------------------------------------------------------------------\n",
     "# EDX-Tomography. \n",
     "\n",
-    "EDX-Tomography can be used to observe the topography of the elements in the sample. The main challenge is the copper x-ray signal being generated at high tilt ( such as -60  or +60 degrees), one way to overcome this is to calibrate the EDX detectors (in case of 4 EDX detectors, 2 might be turned off as high tilting angles) to reduce the collection of the intense copper x-ray signal. but the Cu signal remains intense and might overlap with other element x-ray signals such as Zn_Ka x-ray peak.\n",
+    "EDX-Tomography can be used to observe the topography of the elements in the sample. The main challenge is the copper x-ray signal being generated at high tilt ( such as -60  or +60 degrees), one way to overcome this is to calibrate the EDX detectors (in case of 4 EDX detectors, 2 might be turned off as high tilting angles) to reduce the collection of the intense copper x-ray signal. but the Cu signal remains intense and might overlap with other element x-ray signals such as Zn_Kα x-ray peak.\n",
     "\n",
     "The Principal component analysis (PCA) can be used to denoise or eliminate the Cu signal (when applied on all the tilt angles data by stacking them into one variable). this notebook stacks and denoise/remove unwanted signals such as Cu from the datasets. \n",
     "\n",
@@ -45,7 +45,7 @@
     "# <a id='dat'></a> 1. Specimen & Data\n",
     "\n",
     "\n",
-    "EDX tomography was collected from FeOZn sample using a TEM with 4 EDX detectors (EDX detectors are not turned off at high tilt angles meaning the Cu signal will be intense). Due to the Cu high peak signal it overlaps with the Zn_Ka even after applying PCA denoising on individual tilt angle datasets as shown in figure 1 (left) below.\n",
+    "EDX tomography was collected from FeOZn sample using a TEM with 4 EDX detectors (EDX detectors are not turned off at high tilt angles meaning the Cu signal will be intense). Due to the Cu high peak signal it overlaps with the Zn_Kα even after applying PCA denoising on individual tilt angle datasets as shown in figure 1 (left) below.\n",
     "\n",
     "<img src=\"images/PCA EDX denoising.png\" style=\"height:300px;\">\n",
     "Figure 1: PCA denoising of FeOZn sample using 1 tilt angle dataset (right) and all the tilt angle datasets stacked (left).\n",
@@ -60,7 +60,7 @@
     "Figure 2: PCA decompositition of FeOZn sample showing the first 4 components.\n",
     "\n",
     "\n",
-    "Figure 3 below shows the elemental map of Zn_Ka signal, the signal is noisy using only the raw datasets. When applying EDX map rebinning by 4, the signal is improved a little. However, when applying PCA after rebining, the signal to noise ratio is greatly imporved.\n",
+    "Figure 3 below shows the elemental map of Zn_Kα signal, the signal is noisy using only the raw datasets. When applying EDX map rebinning by 4, the signal is improved a little. However, when applying PCA after rebining, the signal to noise ratio is greatly imporved.\n",
     "\n",
     "\n",
     "<img src=\"images/PCA EDX tomographty elemental map.png\" style=\"height:300px;\">\n",
@@ -542,7 +542,7 @@
    "id": "535734a0",
    "metadata": {},
    "source": [
-    "# <a id='element_of_interest'></a> 6. select an X-ray line of an element to plot the elemental maps:\n",
+    "# <a id='element_of_interest'></a> 6. Select an X-ray line of an element to plot the elemental maps:\n",
     "# -----------------------------------------------------------------------------"
    ]
   },
@@ -575,7 +575,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elemental map for Zn_Ka will be plotted for x-rays in the energy range between 8.2 KeV and 9.1 KeV\n"
+      "Elemental map for Zn_Ka will be plotted for X-rays in the energy range between 8.2 keV and 9.1 keV\n"
      ]
     }
    ],
@@ -635,7 +635,7 @@
     "        # Print or store the % residue for this peak\n",
     "        E_start= \"{:.1f}\".format(peak_position-peak_window)\n",
     "        E_end=   \"{:.1f}\".format(peak_position+peak_window)\n",
-    "        print(f\"Elemental map for {element} will be plotted for x-rays in the energy range between {E_start} KeV and {E_end} KeV\")\n",
+    "        print(f\"Elemental map for {element} will be plotted for X-rays in the energy range between {E_start} keV and {E_end} keV\")\n",
     "        #print(E_start)\n",
     "        #print(E_end)\n",
     "\n",
@@ -656,7 +656,7 @@
    "id": "16d034ed",
    "metadata": {},
    "source": [
-    "### If the energy range of the element of interest is not accurate, remove the '#' sign at the start of the 2 lines below and insert the dimensions manually:"
+    "### If the energy range of the element of interest is not accurate, remove the '#' sign at the start of the two lines below, then insert the dimensions manually:"
    ]
   },
   {
@@ -669,14 +669,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elemental map for Zn_Ka will be plotted for x-rays in the energy range between 8.2 KeV and 9.1 KeV\n"
+      "Elemental map for Zn_Kα will be plotted for X-rays in the energy range between 8.2 keV and 9.1 keV\n"
      ]
     }
    ],
    "source": [
-    "#E_start= 5.0    #<<<< you need to add the . sign after the digit, e.g. type 5.0 instead of 5 for energy value of 5 KeV\n",
+    "#E_start= 5.0    #<<<< you need to add the . sign after the digit, e.g. type 5.0 instead of 5 for energy value of 5 keV\n",
     "#E_end=   6.0\n",
-    "print(f\"Elemental map for {element} will be plotted for x-rays in the energy range between {E_start} KeV and {E_end} KeV\")\n"
+    "print(f\"Elemental map for {element} will be plotted for X-rays in the energy range between {E_start} keV and {E_end} keV\")\n"
    ]
   },
   {
@@ -684,9 +684,9 @@
    "id": "4c851368-ad21-482b-a4f6-88eb7d2d222d",
    "metadata": {},
    "source": [
-    "### Below the elemental map will be saved in 2 formats:\n",
+    "### Below the elemental map will be saved in two formats:\n",
     "### 1- PNG with scale bar(data is compressed)\n",
-    "### 2- TIF format with no scale bar (suitable for further dataprocessing)"
+    "### 2- TIF format with no scale bar (suitable for further data processing)"
    ]
   },
   {
@@ -699,8 +699,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elemental map for Zn_Ka is saved in TIF and PNG format for EDX_Tomo_TiltAngle_ (1).png\n",
-      "Elemental map for Zn_Ka is saved in TIF and PNG format for EDX_Tomo_TiltAngle_ (2).png\n",
+      "Elemental map for Zn_Kα is saved in TIF and PNG format for EDX_Tomo_TiltAngle_ (1).png\n",
+      "Elemental map for Zn_Kα is saved in TIF and PNG format for EDX_Tomo_TiltAngle_ (2).png\n",
       "Done ................................ !!\n"
      ]
     }
@@ -718,7 +718,7 @@
     "    ax_tif.imshow(edx_map_nmf, cmap='viridis')\n",
     "    ax_tif.axis('off')\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(f'Zn_Ka elemental map in TIF format for {names[i]}.tif', bbox_inches='tight', pad_inches=0)\n",
+    "    plt.savefig(f'Zn_Kα elemental map in TIF format for {names[i]}.tif', bbox_inches='tight', pad_inches=0)\n",
     "    plt.close(fig_tif)\n",
     "    \n",
     "    def add_scale_bar(ax, data_shape):\n",
@@ -754,12 +754,12 @@
     "    plt.colorbar(im1, ax=ax_png, fraction=0.046, pad=0.04, format='%.1f')\n",
     "\n",
     "    # Save the plot as a PNG image with scale bar\n",
-    "    plt.savefig(f'Zn_Ka elemental map with scale bar for {names[i]}.png', dpi=300, bbox_inches='tight', pad_inches=0.1)\n",
+    "    plt.savefig(f'Zn_Kα elemental map with scale bar for {names[i]}.png', dpi=300, bbox_inches='tight', pad_inches=0.1)\n",
     "\n",
     "    # Close the figure to free up memory\n",
     "    plt.close(fig_png)\n",
     "\n",
-    "    print(f\"Elemental map for Zn_Ka is saved in TIF and PNG format for {names[i]}.png\")\n",
+    "    print(f\"Elemental map for Zn_Kα is saved in TIF and PNG format for {names[i]}.png\")\n",
     "\n",
     "print(\"Done ................................ !!\")\n"
    ]
