Update Cathodoluminescence (CL) Data Processing.ipynb

--- a/3- Cathodoluminescence  (CL) datasets denoising/Cathodoluminescence (CL) Data Processing.ipynb
+++ b/3- Cathodoluminescence  (CL) datasets denoising/Cathodoluminescence (CL) Data Processing.ipynb
@@ -8,18 +8,18 @@
     "## This script can be found on [GitHub](https://github.com/Basem-Qahtan/STEM-data-processing-scripts) along with other scripts for STEM data processing algorithms.\n",
     "\n",
     "##### --------------------------------------------------------------------------------------------------------------------------------------------\n",
-    "# STEM-Cathodlumensence datasets  \n",
+    "# STEM-Cathodoluminescence datasets  \n",
     "\n",
-    "Cathodlumensence (CL) data aquisition in TEM is used in applications such as LEDs to collect information on the wavelength of the emitted photons from quantum wells for example. in some cases, the sample is the electron beam with a short dewll time to avoid sample's movement. However, this will result in a lo signal to noise ratio (SNR). This notebook increases the SNR of a noisy CL datasets through the Principal component analysis (PCA) denoising.\n",
+    "Cathodoluminescence (CL) data acquisition in TEM is used in applications such as LEDs to collect information on the wavelength of the emitted photons from quantum wells. For example, in some cases the sample is exposed to the electron beam for a short dwell time to avoid sample's movement. However, this will result in a low signal-to-noise ratio (SNR). This notebook increases the SNR of a noisy CL datasets through the principal component analysis (PCA) denoising.\n",
     "\n",
     "\n",
     "## Author\n",
     "\n",
-    "* 15/12/2024 Basem Qahtan - Developed as part of a Ph.D. research at the Italian Institue of Technology (iit)/ University of Genoa (uniGe) in italy and KAUST university in KSA.\n",
+    "* 15/12/2024 Basem Qahtan - Developed as part of a Ph.D. research project at the Italian Institute of Technology (IIT)/ University of Genoa (UniGe) in Italy and KAUST University in KSA.\n",
     "## Changes\n",
     "\n",
     "* 15/10/2024 Update: Added auto cropping and rebinning of EDX map prior to the principal component analysis (PCA) denoising.\n",
-    "* 10/11/2024 Update: removal of negative signals and high intense signals at rnadom pixels (artifacts). \n",
+    "* 10/11/2024 Update: removal of negative signals and high intense signals at random pixels (artifacts). \n",
     "\n",
     "\n",
     "## Requirements\n",
@@ -37,7 +37,7 @@
     "\n",
     "# <a id='dat'></a> 1. Specimen & Data\n",
     "\n",
-    "Samples used in this example were test data as shown i figure 1 below with high noise (left)"
+    "Samples used in this example were test data as shown in figure 1 below with high noise (left)"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "metadata": {},
    "source": [
     "<img src=\"images/CL data PCA denoising.png\" style=\"height:400px;\">\n",
-    "Figure 1: Reconstructed Cathodlumenscence (CL) data after PCA denoising resulting in an enhanced Signal to noise ratio (SNR).\n"
+    "Figure 1: Reconstructed Cathodoluminescence (CL) data after PCA denoising resulting in an enhanced signal-to-noise ratio (SNR).\n"
    ]
   },
   {
